<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/comment_my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/comment_my_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/comment_my_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DateForComment"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/comment_my_deleteBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:backgroundTintMode="screen"
        android:contentDescription="@string/ImgContent"
        android:src="@drawable/baseline_delete_24" />

</LinearLayout>