<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/comment_item_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/comment_item_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/comment_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DateForComment"
        android:textSize="16sp" />

</LinearLayout>