<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.A5CityDetail">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/city_detail_comments_Btn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="48dp"
            android:backgroundTintMode="screen"
            android:contentDescription="@string/ImgContent"
            android:background="?attr/colorSurface"
            android:src="@drawable/baseline_comment_24"
            app:layout_constraintBottom_toTopOf="@+id/city_detail_likeBtn"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/city_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="177dp"
            android:text="@string/SampleCity"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/city_detail_timezone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/EmptyString"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_detail_name" />

        <ImageView
            android:id="@+id/city_detail_weather_img"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/ImgContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_detail_timezone" />

        <TextView
            android:id="@+id/city_detail_weather_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/EmptyString"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_detail_weather_img" />

        <TextView
            android:id="@+id/city_Detail_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/EmptyString"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_detail_weather_info" />

        <ImageButton
            android:id="@+id/city_Detail_saveBtn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTintMode="screen"
            android:contentDescription="@string/ImgContent"
            android:background="?attr/colorSurface"
            android:src="@drawable/baseline_assignment_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/city_detail_likeBtn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTintMode="screen"
            android:contentDescription="@string/ImgContent"
            android:background="?attr/colorSurface"
            android:src="@drawable/baseline_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/city_Detail_historyBtn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:background="?attr/colorSurface"
            android:backgroundTintMode="screen"
            android:contentDescription="@string/ImgContent"
            android:src="@drawable/baseline_history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/city_detail_likeBtn"
            app:layout_constraintStart_toEndOf="@+id/city_Detail_saveBtn" />

        <ImageButton
            android:id="@+id/city_detail_chat_Btn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="48dp"
            android:backgroundTintMode="screen"
            android:background="?attr/colorSurface"
            android:contentDescription="@string/ImgContent"
            android:src="@drawable/baseline_mark_chat_unread_24"
            app:layout_constraintBottom_toTopOf="@+id/city_Detail_saveBtn"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>